@@ -1,5 +1,9 @@
 Revision history for Perl extension BZ::Client.
 
+TBD
+    - BZ::Client::logger protects its input
+    - Add pod for more methods in BZ/Client.pm
+
 1.064 Fr Sep 04 11:57 2015
     - BZ::Client::Test if it cant find a config file, it blesses a hash-ref rather than trying (and failing) to bless a scalar
 
